# MapsPlanner-API

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  alembic.ini  logging.conf  pyproject.toml
.github/workflows/: tests.yml
.run/: pytest in MapsPlanner-API.run.xml
MapsPlanner_API/: __init__.py  __main__.py  conftest.py  gunicorn_runner.py  settings.py  utils.py
MapsPlanner_API/db/: base.py  connection.py  utils.py
MapsPlanner_API/db/migrations/: env.py
MapsPlanner_API/db/migrations/versions/: 2023-12-22-03-56_0a22b8f84960.py  2023-12-22-04-44_59d46ba00537.py  2023-12-22-15-53_d774b20ea55c.py  2023-12-22-17-40_5fe96e846a66.py  2023-12-22-17-46_cdef0d820e51.py  2023-12-23-14-52_a4d20cd9442d.py  2023-12-23-21-32_58da345e5f68.py  2023-12-23-22-24_7681d0d038c2.py  2023-12-23-23-53_24663b098d44.py  2023-12-24-17-07_498cdd2ee6b2.py  2024-01-11-20-39_03533ceead47.py  2024-01-12-19-54_3c5727a374c3.py
MapsPlanner_API/db/models/: AuditLog.py  Marker.py  Session.py  Trip.py  User.py  __init__.py  types.py
MapsPlanner_API/services/: __init__.py
MapsPlanner_API/tests/: __init__.py
MapsPlanner_API/tests/fixtures/: users.json
MapsPlanner_API/web/: __init__.py  application.py  lifetime.py
MapsPlanner_API/web/api/: __init__.py  dependencies.py  logger.py  router.py  schema.py  utils.py
MapsPlanner_API/web/api/audit/: schema.py  views.py
MapsPlanner_API/web/api/authentication/: google_auth.py  test_authentication.py  views.py
MapsPlanner_API/web/api/chatgpt/: chatgpt_client.py
MapsPlanner_API/web/api/echo/: __init__.py  views.py
MapsPlanner_API/web/api/markers/: logic.py  router.py  schema.py  transformers.py  utils.py  views.py
MapsPlanner_API/web/api/monitoring/: __init__.py
MapsPlanner_API/web/api/query_filters/: __init__.py  date_range.py
MapsPlanner_API/web/api/trips/: schema.py  utils.py  views.py
MapsPlanner_API/web/api/users/: schema.py  test_users.py  utils.py  views.py
MapsPlanner_API/web/services/: Maptiler.py
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.pytest.yml  docker-compose.yml
