[tool.poetry]
name = "MapsPlanner_API"
version = "0.0.3"
description = "A backend for the MapsPlanner react application."
authors = ["Nimrod Wagner <nimrod7676@gmail.com>"]
maintainers = []

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = { version = "^0.22.0", extras = ["standard"] }
gunicorn = "^21.2.0"
pydantic = "^2"
pydantic-settings = "^2"
yarl = "^1.9.2"
ujson = "^5.8.0"
SQLAlchemy = {version = "^2.0.25", extras = ["asyncio"]}
alembic = "^1.11.1"
asyncpg = { version = "^0.28.0", extras = ["sa"] }
httptools = "^0.6.0"
python-multipart = "0.0.6"
requests = "2.31.0"
openai = "1.6.1"
geopy = "2.4.1"
sqlalchemy-utils = "0.41.1"
fastapi-filter = { version = "1.1.0", extras = ["sqlalchemy"] }

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
flake8 = "~4.0.1"
mypy = "^1.1.1"
isort = "^5.11.4"
pre-commit = "^3.0.1"
wemake-python-styleguide = "^0.17.0"
black = "^22.12.0"
autoflake = "^1.6.1"
pytest-cov = "^4.0.0"
anyio = "^3.6.2"
pytest-env = "^0.8.1"
httpx = "^0.23.3"
ipython = "8.19.0"
nltk = "3.8.1"
python-dateutil = "2.8.2"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
src_paths = ["MapsPlanner_API",]

[tool.mypy]
strict = false
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

[tool.pytest.ini_options]
log_cli=0
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
env = []

[fastapi-template.options]
project_name = "MapsPlanner_API"
api_type = "rest"
enable_redis = "None"
enable_rmq = "None"
ci_type = "github"
enable_migrations = "True"
enable_taskiq = "None"
enable_kube = "None"
kube_name = "MapsPlanner-API"
enable_routers = "True"
enable_kafka = "None"
enable_loguru = "None"
traefik_labels = "None"
add_dummy = "None"
orm = "sqlalchemy"
self_hosted_swagger = "None"
prometheus_enabled = "None"
sentry_enabled = "None"
otlp_enabled = "None"
pydanticv1 = "None"
gunicorn = "True"
add_users = "None"
cookie_auth = "None"
jwt_auth = "None"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
